update code style